# remote-desktop

./: .gitignore  CMakeLists.txt  README.md
src/: Frame.cpp  Frame.h  H264Decoder.cpp  H264Decoder.h  H264Encoder.cpp  H264Encoder.h  NetClient.cpp  NetClient.h  NetIO.cpp  NetIO.h  NetServer.cpp  NetServer.h  Packet.h  ScreenData.cpp  ScreenData.h  reciever.cpp  sender.cpp
src/timer/: timer.cpp  timer.h
test/: CMakeLists.txt  Screen.cpp  Screen.h  avlib  avlib.cpp  codec  codec.cpp  newidea.cpp  openh264  openh264.cpp  reciever  reciever.cpp  sender  sender.cpp  xcb  xcb.cpp
